--- a/src/CMSRoute.scss
+++ b/src/CMSRoute.scss
@@ -10,8 +10,8 @@
         }
     }
 
-    // .link-button {
-    //     display: inline-block;
-    //     margin-right: 10px;
-    // }
+    .link-button {
+        display: inline-block;
+        margin-right: 10px;
+    }
 }
